[package]
name = "poseidon"
version = "0.1.0"
edition = "2021"
license = "Apache 2.0"
authors = ["Cardinal Cryptography"]
description = "An instantiation of the Poseidon SNARK-friendly hash function."

[dependencies]
ark-bls12-381 = { version = "^0.3.0" }
ark-r1cs-std = {version = "^0.3.0" , default-features = false }
ark-relations = { version = "^0.3.0", default-features = false }
ark-sponge = { git = "https://github.com/penumbra-zone/sponge", branch = "r1cs", default-features = false, features = ["r1cs"] }
ark-std = { version = "^0.3.0", default-features = false }
ark-ff = { version = "^0.3.0", default-features = false }
once_cell = { version = "1.8", default-features = false }
poseidon-paramgen = { version = "0.1", default-features = false }
poseidon-permutation = { version = "0.1", default-features = false }
num-traits = { version = "0.2.15", default-features = false, features = ["i128"] }

[features]
default = ["std"]
std = [
    "ark-bls12-381/std",
    "ark-ff/std",
    "ark-r1cs-std/std",
    "ark-relations/std",
    "ark-sponge/std",
    "ark-std/std",
    "once_cell/std",
    "num-traits/std",
]
