[package]
name = "primitives"
version = "0.4.0"
authors = ["Cardinal Cryptography"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
sp-api = { git = "https://github.com/paritytech/substrate.git", rev = "49a4103", default-features = false }
sp-application-crypto = { git = "https://github.com/paritytech/substrate.git", rev = "49a4103", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate.git", rev = "49a4103", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", rev = "49a4103", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate.git", rev = "49a4103", default-features = false }
# we need aura authorites till we have our own pallet
sp-consensus-aura = { git = "https://github.com/paritytech/substrate.git", rev = "49a4103", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "sp-api/std",
    "sp-application-crypto/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-consensus-aura/std",
]

