[package]
name = "primitives"
version = "0.4.0"
authors = ["Cardinal Cryptography"]
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0", default-features = false, features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
scale-info = { version = "2.0", default-features = false, features = ["derive"] }

sp-api = { default-features = false, git = "https://github.com/timorl/substrate.git", branch = "A0-558-walukr" }
sp-application-crypto = { default-features = false, git = "https://github.com/timorl/substrate.git", branch = "A0-558-walukr" }
sp-core = { default-features = false, git = "https://github.com/timorl/substrate.git", branch = "A0-558-walukr" }
sp-runtime = { default-features = false, git = "https://github.com/timorl/substrate.git", branch = "A0-558-walukr" }
sp-std = { default-features = false, git = "https://github.com/timorl/substrate.git", branch = "A0-558-walukr" }
sp-staking = { default-features = false, git = "https://github.com/timorl/substrate.git", branch = "A0-558-walukr" }

[features]
default = ["std"]
std = [
    "codec/std",
    "serde/std",
    "sp-api/std",
    "sp-application-crypto/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-staking/std",
]
short_session = []
