[package]
name = "primitives"
version = "0.8.1"
license = "Apache 2.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
parity-scale-codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }

sp-api = { workspace = true }
sp-application-crypto = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-runtime-interface = { workspace = true, optional = true }
sp-std = { workspace = true }
sp-staking = { workspace = true }
sp-consensus-aura = { workspace = true }
subtle = "=2.4.1"

halo2_proofs = { workspace = true, features = ["substrate"], optional = true }

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "serde/std",

    "sp-api/std",
    "sp-application-crypto/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-staking/std",
    "sp-consensus-aura/std"
]
short_session = []

liminal = [
    "sp-runtime-interface",
]
liminal-std = [
    "liminal",
    "std",
    "sp-runtime-interface/std",
    "halo2_proofs",
]
