[package]
name = "payout-stakers"
version = "0.1.0"
authors = ["Cardinal Cryptography"]
edition = "2021"

[dependencies]
aleph_client = { path = "../../aleph-client" }
e2e = { path = "../../e2e-tests", package = "aleph-e2e-client" }
primitives = { path = "../../primitives" }

sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18", features = ["full_crypto"] }
sp-keyring = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
codec = { package = 'parity-scale-codec', version = "3.0.0", features = ['derive'] }

substrate-api-client = { git = "https://github.com/Cardinal-Cryptography/substrate-api-client.git", tag = "polkadot-v0.9.18.b26ad4db" }

anyhow = "^1.0"
env_logger = "0.8"
log = "0.4"
rayon = "1.5.1"
