[package]
name = "button"
version = "0.1.0"
authors = ["Cardinal Cryptography"]
edition = "2021"

[dependencies]
ink_env = { version = "3.0", default-features = false }
ink_lang = { version = "3.0", default-features = false }
ink_metadata = { version = "3.0", default-features = false, features = ["derive"], optional = true }
ink_prelude = { version = "3.2.0", default-features = false }
ink_primitives = { version = "3.0", default-features = false }
ink_storage = { version = "3.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

[lib]
name = "button"
path = "lib.rs"
crate-type = [
  "rlib",
  # "cdylib"
]

[features]
default = ["std"]
std = [
    "ink_env/std",
    "ink_lang/std",
    "ink_metadata/std",
    "ink_prelude/std",    
    "ink_primitives/std",
    "ink_storage/std",
    "scale-info/std",
    "scale/std",
]
ink-as-dependency = []