[package]
name = "button"
version = "0.1.0"
authors = ["Cardinal Cryptography"]
edition = "2021"

[dependencies]
ink = { git = "https://github.com/paritytech/ink", rev = "4655a8b4413cb50cbc38d1b7c173ad426ab06cde", default-features = false}

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }

openbrush = { git = "https://github.com/727-Ventures/openbrush-contracts.git", rev = "3.0.0-beta", default-features = false, features = ["psp22"] }

access_control = { path = "../access_control", default-features = false, features = ["ink-as-dependency"] }
game_token = { path = "../game_token", default-features = false, features = ["ink-as-dependency"] }
ticket_token = { path = "../ticket_token", default-features = false, features = ["ink-as-dependency"] }
marketplace = { path = "../marketplace", default-features = false, features = ["ink-as-dependency"] }

[lib]
name = "button"
path = "lib.rs"
crate-type = [
  "cdylib",
  "rlib",
]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale-info/std",
    "scale/std",
    "access_control/std",
    "game_token/std",
    "ticket_token/std",
    "marketplace/std",
    "openbrush/std",
]
ink-as-dependency = []
