[package]
name = "early_bird_special"
version = "0.1.0"
authors = ["Cardinal Cryptography"]
edition = "2021"
license = "Apache 2.0"

[dependencies]
ink_env = { version = "3.2.0", default-features = false }
ink_lang = { version = "3.2.0", default-features = false }
ink_lang_codegen = { version = "3.2.0", default-features = false }
ink_metadata = { version = "3.2.0", default-features = false, features = ["derive"], optional = true }
ink_prelude = { version = "3.2.0", default-features = false }
ink_primitives = { version = "3.2.0", default-features = false }
ink_storage = { version = "3.2.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

button = { path = "../button", default-features = false }
access_control = { path = "../access_control", default-features = false, features = ["ink-as-dependency"] }

[lib]
name = "early_bird_special"
path = "lib.rs"
crate-type = [
  # Used for normal contract Wasm blobs.
  "cdylib",
]

[features]
default = ["std"]
std = [
  "button/std",
  "ink_env/std",
  "ink_lang_codegen/std",
  "ink_metadata/std",
  "ink_prelude/std",
  "ink_primitives/std",
  "ink_storage/std",
  "scale-info/std",
  "scale/std",
]
ink-as-dependency = []
