[package]
name = "shared"
version = "0.1.0"
authors = ["Cardinal Cryptography"]
edition = "2021"

[dependencies]
ink_env = { version = "3.2.0", default-features = false }
ink_lang = { version = "3.2.0", default-features = false }

access_control = { path = "../access_control", default-features = false }

[lib]
name = "shared"
path = "lib.rs"
# crate-type = [
#   "rlib",
# ]

[features]
default = ["std"]
std = [
    "ink_env/std",
    "ink_lang/std",
]
# ink-as-dependency = []