[package]
name = "simple_dex"
version = "0.1.0"
authors = ["Cardinal Cryptography"]
edition = "2021"
license = "Apache 2.0"

[dependencies]
ink_env = { version = "~3.3.0", default-features = false }
ink_lang = { version = "~3.3.0", default-features = false }
ink_lang_codegen = { version = "~3.3.0", default-features = false }
ink_metadata = { version = "~3.3.0", default-features = false, features = ["derive"], optional = true }
ink_prelude = { version = "~3.3.0", default-features = false }
ink_primitives = { version = "~3.3.0", default-features = false }
ink_storage = { version = "~3.3.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

openbrush = { git = "https://github.com/Supercolony-net/openbrush-contracts.git", rev = "8a20f95", default-features = false, features = ["psp22"] }
num = { version = "0.4.0", default-features = false } 
access_control = { path = "../access_control", default-features = false, features = ["ink-as-dependency"] }
game_token = { path = "../game_token", default-features = false, features = ["ink-as-dependency"] }

[lib]
name = "simple_dex"
path = "lib.rs"
crate-type = [
  # Used for normal contract Wasm blobs.
  "cdylib",
]

[features]
default = ["std"]
std = [
  "access_control/std",
  "game_token/std",
  "ink_env/std",
  "ink_lang_codegen/std",
  "ink_metadata/std",
  "ink_prelude/std",
  "ink_primitives/std",
  "ink_storage/std",
  "num/std",
  "openbrush/std",
  "scale-info/std",
  "scale/std",
]
ink-as-dependency = []

[profile.dev]
codegen-units = 16