[package]
name = "wrapped_azero"
version = "1.0.0"
authors = ["Cardinal Cryptography"]
edition = "2021"
license = "Apache 2.0"

[dependencies]
ink = { git = "https://github.com/paritytech/ink", rev = "4655a8b4413cb50cbc38d1b7c173ad426ab06cde", default-features = false}

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }

openbrush = { git = "https://github.com/727-Ventures/openbrush-contracts.git", rev = "3.0.0-beta", default-features = false, features = ["psp22"] }

num-traits = { version = "0.2", default-features = false }
access_control = { path = "../access_control", default-features = false, features = ["ink-as-dependency"] }

[lib]
name = "wrapped_azero"
path = "lib.rs"
crate-type = [
    # Used for normal contract Wasm blobs.
    "cdylib",
    # Used for ABI generation.
    "rlib",
]

[features]
default = ["std"]
std = [
    "num-traits/std",
    "ink/std",
    "openbrush/std",
    "scale-info",
    "scale-info/std",
    "scale/std",
    "access_control/std",
]
ink-as-dependency = []

[profile.dev]
codegen-units = 16
