[package]
name = "pallet-aleph"
version = "0.4.0"
authors = ["Cardinal Cryptography"]
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0", default-features = false, features = ["derive"] }
serde = "1.0"
scale-info = { version = "2.0", default-features = false, features = ["derive"] }

frame-support = { default-features = false, git = "https://github.com/timorl/substrate.git", branch = "A0-558-walukr" }
frame-system = { default-features = false, git = "https://github.com/timorl/substrate.git", branch = "A0-558-walukr" }
pallet-balances = { default-features = false, git = "https://github.com/timorl/substrate.git", branch = "A0-558-walukr" }
pallet-session = { default-features = false, git = "https://github.com/timorl/substrate.git", branch = "A0-558-walukr" }
sp-io = { default-features = false, git = "https://github.com/timorl/substrate.git", branch = "A0-558-walukr" }
sp-std = { default-features = false, git = "https://github.com/timorl/substrate.git", branch = "A0-558-walukr" }

primitives = { path = "../../primitives", default-features = false }

[dev-dependencies]
pallet-timestamp = { default-features = false, git = "https://github.com/timorl/substrate.git", branch = "A0-558-walukr" }
sp-runtime = { default-features = false, git = "https://github.com/timorl/substrate.git", branch = "A0-558-walukr" }
sp-core = { default-features = false, git = "https://github.com/timorl/substrate.git", branch = "A0-558-walukr" }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "sp-std/std",
    "primitives/std",
    "pallet-balances/std",
    "pallet-session/std"
]
