[package]
name = "pallet-committee-management"
version = "0.1.0"
edition = "2021"

[dependencies]

codec = { package = "parity-scale-codec", version = "3.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.0", default-features = false, features = ["derive"] }
rand = { version = "0.8.5", default-features = false, features = [ "small_rng" ] }

pallet-session = { default-features = false, git = "https://github.com/Cardinal-Cryptography/substrate.git", branch = "aleph-v0.9.39" }
sp-staking = { default-features = false, git = "https://github.com/Cardinal-Cryptography/substrate.git", branch = "aleph-v0.9.39" }
sp-std = { default-features = false, git = "https://github.com/Cardinal-Cryptography/substrate.git", branch = "aleph-v0.9.39" }
pallet-staking = { default-features = false, git = "https://github.com/Cardinal-Cryptography/substrate.git", branch = "aleph-v0.9.39" }
sp-runtime = { default-features = false, git = "https://github.com/Cardinal-Cryptography/substrate.git", branch = "aleph-v0.9.39" }
frame-support = { default-features = false, git = "https://github.com/Cardinal-Cryptography/substrate.git", branch = "aleph-v0.9.39" }
frame-system = { default-features = false, git = "https://github.com/Cardinal-Cryptography/substrate.git", branch = "aleph-v0.9.39" }
pallet-authorship = { default-features = false, git = "https://github.com/Cardinal-Cryptography/substrate.git", branch = "aleph-v0.9.39" }
sp-io = { default-features = false, git = "https://github.com/Cardinal-Cryptography/substrate.git", branch = "aleph-v0.9.39" }

pallets-support = { path = "../support", default-features = false }
primitives = { path = "../../primitives", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "rand/std",
    "pallet-session/std",
    "pallet-staking/std",
    "sp-staking/std",
    "sp-std/std",
    "primitives/std",
    "sp-runtime/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-authorship/std",
    "sp-io/std",
]

try-runtime = [
    "frame-support/try-runtime",
    "pallets-support/try-runtime",
]
